cabal-version:      2.4
name:               template-parser
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Joosep Jääger
maintainer:         joosep.jaager@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable template-parser
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
      aeson,
      base ^>=4.15.1.0,
      bytestring,
      lens,
      lens-aeson,
      optparse-applicative,
      parsers,
      text,
      trifecta

    hs-source-dirs:   app
    default-language: Haskell2010
